fix: fix doctype, correct lang to en

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
  <head>
   <!--Тренируюсь-->
-  <title>darin4 1st page</title>
+  <title>darin4 cv</title>
   <meta name="viewport" content="width=device-width,height=device-height, initial-scale=1.0, maximum-scale=1.0">
-  <html lang="ru">
+  <html lang="en">
   <body style="background-color: grey"><!--Фон сайта grey--></body> 
   </head>
+  <body></body>
