fix: changing modified:   index.html modified:   style.css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <!--Тренируюсь-->
-  <title>darin4 cv</title>
-  <meta name="viewport" content="width=device-width,height=device-height, initial-scale=1.0, maximum-scale=1.0">
-  <html lang="en">
- </head>
- <body style="background-color: grey"><!--Фон сайта grey--></body>
-</html>
+    <head><!--Тренируюсь-->
+    <title>darin4 cv</title>
+    <meta name="viewport" content="width=device-width,height=device-height, initial-scale=1.0, maximum-scale=1.0">
+    <html lang="en">
+    </head>
+    <body style="background-color: grey"><!--Фон сайта grey--></body>
+    </html>
