--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head><!--Тренируюсь-->
-    <title>darin4 cv</title>
-    <meta name="viewport" content="width=device-width,height=device-height, initial-scale=1.0, maximum-scale=1.0">
-    <html lang="en">
+        <title>darin4 cv</title>
+        <meta name="viewport" content="width=device-width,height=device-height, initial-scale=1.0, maximum-scale=1.0">
     </head>
-    <body style="background-color: grey"><!--Фон сайта grey--></body>
+    <body style="background-color: grey"><!--Фон сайта grey-->
+    </body>
     </html>
