refactor: delete style atribute from html file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <head><!--Тренируюсь-->
         <title>darin4 cv</title>
     </head>
-    <body style="background-color: grey"><!--Фон сайта grey-->
+    <body>
     </body>
     </html>
