--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head><!--Тренируюсь-->
-        <title>darin4cv</title>
-    </head>
-    <body>
-    </body>
-    </html>
+    <!--Da prebudet s nami sila, padavani-->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Darina Slobodskaya CV</title>
+    <!-- Подключаю стили и фавикон -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.ico">
+</head>
+
+<body>
+</body>
+
+</html>
