fix: according to w3c val

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </header>
     <main>
-        <img class="imgMy" src="photo.jpeg" alt="Darina" />
+        <img class="imgMy" src="photo.jpeg" alt="Darina">
         <h1>Darina Slobodskaya</h1>
 
         <h3 id="contact-information">Contact Information</h3>
@@ -40,12 +40,12 @@
         </ul>
 
         <h2 id="about-me">About Me</h2>
-        <p>I have been engaged in sales and customer management all my working life.
-            Since 2023 I decided to change the vector of my development.
-            I successfully completed course of automation QA in Red Rover School in 2024.
-            Now I am tickled pink with the idea of being a web-developer.
-            I have also been leading English club as a voluntere teacher, we meet twice a week online.
-            I love my team and I love teaching them.
+        <p>I have been engaged in sales and customer management all my working life.<br>
+            Since 2023 I decided to change the vector of my development.<br>
+            I successfully completed course of automation QA in Red Rover School in 2024.<br>
+            Now I am tickled pink with the idea of being a web-developer.<br>
+            I have also been leading English club as a voluntere teacher, we meet twice a week online.<br>
+            I love my team and I love teaching them.<br>
             I am also running some projects as a web-administrator.</p>
         <h2 id="skills">Skills</h2>
         <ul style="list-style-type: circle">
@@ -62,13 +62,9 @@
         <h2 id="code-examples">Code Examples</h2>
 
         <pre class="codeExample">
-            <code>
-<select name="yammi">
-<option value='b'>Broccoli</option>
-<option value='z' selected>Zucchini</option>
-</select>
-<marquee direction="right" scrollamount="10">Это самый лавли Бусик ол оуве зе ворлд</marquee>
-<p>Всем привет!<br><u>Тут я вытворяю код.</u><br><em>Уж как получается, так и получается.</em></p>
+            <code>function abbrevName(name){
+                return name[0].toUpperCase() + "." + name[name.indexOf(" ")+1].toUpperCase();
+          }
             </code>
         </pre>
         <h2>Projects</h2>
@@ -77,11 +73,9 @@
         <h2 id="work-experience">Work Experience</h2>
         <ul>
             <li>Servolux Vostok<p>Key account manager (on maternity leave)</p>
-
             </li>
             <li>Pobeda confectionery factory
                 <p>Key account manager</p>
-
             </li>
             <li>Meat processing plant Vsevolozckiy<p>
                     Sales Manager</p>
@@ -89,39 +83,38 @@
         </ul>
 
         <h2 id="education">Education</h2>
+        <ul>
+            <li>Red Rover School (Automation QA (JS))</li>
+            <li>Institute of Law and Entrepreneurship, Pushkin <br>
+                (Management, Corporate Governance (Master&#39;s degree))</li>
+            <li>R. Wallenberg Institute of Special Pedagogy and Psychology, St. Petersburg (Foreign language teacher)
+            </li>
+            <li>St. Petersburg State Educational Institution SPO &quot;Petrovsky College&quot;<br>
+                Department of International Programs, Economics and Management, Foreign Language teacher (English,
+                German)</li>
+        </ul>
+        <h3 id="advanced-training-courses">Advanced training, courses</h3>
+        <h4 id="certificate">Certificate</h4>
+        <ul>
+            <li>LLC &quot;University of Fitness Technologies&quot;, Children&#39;s fitness instructor<h4
+                    id="electronic-certificates">Electronic certificates</h4>
+            </li>
+            <li>Certificate No. 100992641 for the &quot;English Language&quot; program</li>
+            <li>Certificate No. 101007714 for the program &quot;System analysis in management&quot;</li>
+            <li>Certificate No. 101007735 for the program &quot;Introduction to English grammar&quot;</li>
+            <li>Certificate No. 101007845 for the program &quot;Management&quot;</li>
+        </ul>
+        <h2 id="extra-skills">Extra Skills</h2>
 
-
-
-        <li>Red Rover School</li>
-        <li>Automation QA (JS)</li>
-        <li>Institute of Law and Entrepreneurship, Pushkin</li>
-        <li>Management, Corporate Governance (Master&#39;s degree)</li>
-        <li>Institute of Law and Entrepreneurship, Pushkin</li>
-        <li>Management, Organization Management (specialist)</li>
-        <li>R. Wallenberg Institute of Special Pedagogy and Psychology, St. Petersburg</li>
-        <li>Foreign language teacher</li>
-        <li>St. Petersburg State Educational Institution SPO &quot;Petrovsky College&quot;</li>
-        <li>Department of International Programs, Economics and Management, Foreign Language teacher (English,
-            German)<h3 id="advanced-training-courses">Advanced training, courses</h3>
-            <h4 id="certificate">Certificate</h4>
-        </li>
-        <li>LLC &quot;University of Fitness Technologies&quot;, Children&#39;s fitness instructor<h4
-                id="electronic-certificates">Electronic certificates</h4>
-        </li>
-        <li>Certificate No. 100992641 for the &quot;English Language&quot; program</li>
-        <li>Certificate No. 101007714 for the program &quot;System analysis in management&quot;</li>
-        <li>Certificate No. 101007735 for the program &quot;Introduction to English grammar&quot;</li>
-        <li>Certificate No. 101007845 for the program &quot;Management&quot;<h2 id="extra-skills">Extra Skills</h2>
-        </li>
-        <li>Driving Lycense, <em>driving experience 17 y.</em>
-            <h3 id="languages">Languages</h3>
-        </li>
-        <li>Russian</li>
-        <li>English (B2)</li>
-        <li><a href="https://examinator.epam.com/Main/PersonalAssignments" title="Link to Test EPAM">EPAM English
-                Test!</a></li>
-        <li>German (basic level)</li>
-        </p>
+        <p>Driving Lycense, <em>driving experience 17 y.</em></p>
+        <h3 id="languages">Languages</h3>
+        <ul>
+            <li>Russian</li>
+            <li>English (B2)</li>
+            <li><a href="https://examinator.epam.com/Main/PersonalAssignments" title="Link to Test EPAM">EPAM English
+                    Test!</a></li>
+            <li>German (basic level)</li>
+        </ul>
     </main>
     <footer class="footer">
         <p>©2024 darin4CV.<br>All rights reserved.</p>
